Fixed overlay z-index issues

--- a/scss/_overlay.scss
+++ b/scss/_overlay.scss
@@ -10,7 +10,7 @@ aside {
   padding: $padding-xl;
   color: $color-black;
   transition: all 0.2s ease;
-  z-index: 2;
+  z-index: 100;
   opacity: 0;
   visibility: hidden;
 
